action converter removes 3 dimensions